--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AWSCongnitoDemo</string>
+    <string name="facebook_app_id">1141045130127043</string>
+    <string name="facebook_client_token">fa31826405b07dab83125b33d4bf9c5b</string>
+    <string name="fb_login_protocol_scheme">fb1141045130127043</string>
 </resources>
